fix link to website. add Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-	<title>Entropy Source Consulting LLC</title>
-  <meta name="description" content="Entropy Source Consulting LLC. Golang - Machine Learning - Mobile API">
-  <meta name="author" content="Entropy Source Consulting LLC. Golang - Machine Learning - Mobile API">
-    <link href="https://entropysource.com/css/bootstrap.min.css" rel="stylesheet" media="screen,projection">
-    <link href="https://entropysource.com/css/font-awesome.min.css" rel="stylesheet" media="screen,projection">
-    <link href="https://entropysource.com/css/animate.min.css" rel="stylesheet" media="screen,projection">
-    <link href="https://entropysource.com/css/lightbox.css" rel="stylesheet" media="screen,projection">
-  	<link href="https://entropysource.com/css/main.css" rel="stylesheet">
-  	<link href="https://entropysource.com/css/responsive.css" rel="stylesheet" media="screen,projection">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <title>Entropy Source Consulting LLC</title>
+    <meta name="description"
+        content="Entropy Source Consulting LLC. Deep Learning - Tensorflow - Machine Learning - Data Pipeline">
+    <meta name="author" content="Entropy Source Consulting LLC. Deep Learning - Tensorflow/PyTorch - Mobile API">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50383115-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'UA-50383115-2');
+    </script>
 
-    <link rel="shortcut icon" href="https://entropysource.com/images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://entropysource.com/images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://entropysource.com/images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://entropysource.com/images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="https://entropysource.com/images/ico/apple-touch-icon-57-precomposed.png">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen,projection">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"
+        media="screen,projection">
+    <link href="/css/animate.min.css" rel="stylesheet" media="screen,projection">
+    <link href="/css/lightbox.css" rel="stylesheet" media="screen,projection">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/responsive.css" rel="stylesheet" media="screen,projection">
+    <link rel="shortcut icon" href="/images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/ico/apple-touch-icon-57-precomposed.png">
 </head>
 
 <body>
-    	<header id="header">
+    <header id="header">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 overflow">
-                   <div class="social-icons pull-right">
+                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
                         </ul>
                     </div>
                 </div>
-             </div>
+            </div>
         </div>
         <div class="navbar navbar-inverse" role="banner">
             <div class="container">
@@ -45,7 +56,7 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                    	<h1><img src="images/logo-20151001.png" alt="logo"></h1>
+                        <h1><img src="/images/logo-20151001.png" alt="logo"></h1>
                     </a>
 
                 </div>
@@ -67,63 +78,41 @@
                     <div class="slide-text">
                         <h1>Mine your mountain of data</h1>
                         <lu>
-                        <li>Deep Learning Models (Tensorflow, PyTorch)</li>
-                        <li>Assessment of statistical methodology possibilities</li>
-                        <li>Custom machine learning modeling and algorithm design</li>
-                        <li>Turn key solutions to data pipelines. From design through integration and final tuning</li>
-                        <li>Implementation architecture and integration of ETL processes (AWS/Golang) </li>
-                        <li>Analytics engine deployment and operation (Snowplow custom metrics)</li>
-                        <li>Ad-Hoc Mobile monitoring solutions (iOS/Android app connected to data sources)</li>
+                            <li>Custom Deep Learning Models using Tensorflow, PyTorch for NLP, Vision, Reinforcement
+                                Learning</li>
+                            <li>End to End Machine Learning Pipelines (KubeFlow/Kubernetes/Google Cloud, SageMaker/AWS)
+                            </li>
+                            </li>
+                            <li>Custom design and integration of ETL processes (GoogleCloud/AWS/Golang/Python) </li>
+                            <li>Ad-Hoc Mobile monitoring solutions (iOS/Android app connected to data sources)</li>
                         </lu>
                         <a href="mailto:fmilo@entropysource.com" class="btn btn-common">Contact us</a>
                     </div>
-                    <img src="images/home/slider/hill.png" class="slider-hill" alt="slider image">
-                    <img src="images/home/slider/house.png" class="slider-house" alt="slider image">
-                    <img src="images/home/slider/sun.png" class="slider-sun" alt="slider image">
-                    <img src="images/home/slider/birds1.png" class="slider-birds1" alt="slider image">
-                    <img src="images/home/slider/birds2.png" class="slider-birds2" alt="slider image">
+                    <img src="/images/home/slider/hill.png" class="slider-hill" alt="slider image">
+                    <img src="/images/home/slider/house.png" class="slider-house" alt="slider image">
+                    <img src="/images/home/slider/sun.png" class="slider-sun" alt="slider image">
+                    <img src="/images/home/slider/birds1.png" class="slider-birds1" alt="slider image">
+                    <img src="/images/home/slider/birds2.png" class="slider-birds2" alt="slider image">
                 </div>
             </div>
         </div>
         <div class="preloader"><i class="fa fa-sun-o fa-spin"></i></div>
+        <div class="col-sm-12 text-center bottom-separator">
+            <img src="/images/home/under.png" class="img-responsive inline" alt="">
+        </div>
     </section>
 
-    <footer id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 text-center bottom-separator">
-                    <img src="images/home/under.png" class="img-responsive inline" alt="">
-                </div>
-                <div class="col-md-4 col-sm-6">
-
-                </div>
-                <div class="col-md-3 col-sm-6">
-
-                    <div>
-                        <h2>Contacts</h2>
-                        <address>
-                        E-mail: <a href="mailto:fmilo@entropysource.com">fmilo@entropysource.com</a><br>
-                        </address>
-
-
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                </div>
-                <div class="col-sm-12">
-                    <div class="copyright-text text-center">
-                        <p>&copy; Entropy source Consulting 2019. All Rights Reserved.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <footer class="footer">
+        <h4>
+            &copy; Entropy source Consulting 2020. All Rights Reserved.
+        </h4>
     </footer>
 
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/lightbox.min.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-
+    <script type="text/javascript" src="/js/jquery.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/lightbox.min.js"></script>
+    <script type="text/javascript" src="/js/wow.min.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
 </body>
+
 </html>
