--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-    <title>Entropy Source Consulting LLC</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Entropy Source</title>
     <meta name="description"
-        content="Entropy Source Consulting LLC. Deep Learning - Tensorflow - Machine Learning - Data Pipeline">
+        content="Entropy Source Consulting LLC. Deep Learning - ChatGPT - Reinforcement Learning - PyTorch - Machine Learning - Data Pipeline">
     <meta name="author" content="Entropy Source Consulting LLC. Deep Learning - Tensorflow/PyTorch - Mobile API">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -15,7 +15,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'UA-50383115-2');
     </script>
 
@@ -27,10 +26,9 @@
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/responsive.css" rel="stylesheet" media="screen,projection">
     <link rel="shortcut icon" href="/images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon" href="/images/ico/apple-touch-icon-57-precomposed.png">
 </head>
 
 <body>
@@ -77,15 +75,15 @@
                 <div class="main-slider">
                     <div class="slide-text">
                         <h1>Mine your mountain of data</h1>
-                        <lu>
+                        <ul>
                             <li>Custom Deep Learning Models using Tensorflow, PyTorch for NLP, Vision, Reinforcement
                                 Learning</li>
                             <li>End to End Machine Learning Pipelines (KubeFlow/Kubernetes/Google Cloud, SageMaker/AWS)
                             </li>
                             </li>
-                            <li>Custom design and integration of ETL processes (GoogleCloud/AWS/Golang/Python) </li>
+                            <li>Custom design and integration of ETL processes (AWS/Python/Golang/TypeScript) </li>
                             <li>Ad-Hoc Mobile monitoring solutions (iOS/Android app connected to data sources)</li>
-                        </lu>
+                        </ul>
                         <a href="mailto:fmilo@entropysource.com" class="btn btn-common">Contact us</a>
                     </div>
                     <img src="/images/home/slider/hill.png" class="slider-hill" alt="slider image">
@@ -104,7 +102,7 @@
 
     <footer class="footer">
         <h4>
-            &copy; Entropy source Consulting 2020. All Rights Reserved.
+            &copy; Entropy source Consulting 2023. All Rights Reserved.
         </h4>
     </footer>
 
