--- a/src/index.html
+++ b/src/index.html
@@ -1,148 +1,267 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Entropy Source</title>
-    <meta name="description"
-        content="Entropy Source Consulting LLC. Deep Learning - ChatGPT - Reinforcement Learning - PyTorch - Machine Learning - Data Pipeline">
-    <meta name="author" content="Entropy Source Consulting LLC. Deep Learning - Tensorflow/PyTorch - Mobile API">
+    <meta
+      name="description"
+      content="Entropy Source Consulting LLC. Deep Learning - ChatGPT - Reinforcement Learning - PyTorch - Machine Learning - Data Pipeline"
+    />
+    <meta
+      name="author"
+      content="Entropy Source Consulting LLC. Deep Learning - Tensorflow/PyTorch - Mobile API"
+    />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50383115-2"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-50383115-2"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-50383115-2');
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-50383115-2");
     </script>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen,projection">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"
-        media="screen,projection">
-    <link href="/css/animate.min.css" rel="stylesheet" media="screen,projection">
-    <link href="/css/lightbox.css" rel="stylesheet" media="screen,projection">
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/responsive.css" rel="stylesheet" media="screen,projection">
-    <link href="/style.css" rel="stylesheet" media="screen,projection">
-    <link rel="shortcut icon" href="/images/ico/favicon.ico">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon" href="/images/ico/apple-touch-icon-57-precomposed.png">
-</head>
+    <link
+      href="/css/bootstrap.min.css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link
+      href="css/animate.min.css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link href="css/lightbox.css" rel="stylesheet" media="screen,projection" />
+    <link href="css/main.css" rel="stylesheet" />
+    <link
+      href="css/responsive.css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link href="style.css" rel="stylesheet" media="screen,projection" />
+    <link rel="shortcut icon" href="/images/ico/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="images/ico/apple-touch-icon-114-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/images/ico/apple-touch-icon-72-precomposed.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/images/ico/apple-touch-icon-57-precomposed.png"
+    />
+  </head>
 
-<body>
+  <body>
     <header id="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 overflow">
+            <div class="social-icons pull-right">
+              <ul class="nav nav-pills"></ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="navbar navbar-inverse" role="banner">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 overflow">
-                    <div class="social-icons pull-right">
-                        <ul class="nav nav-pills">
-                        </ul>
-                    </div>
-                </div>
-            </div>
+          <div class="navbar-header">
+            <button
+              type="button"
+              class="navbar-toggle"
+              data-toggle="collapse"
+              data-target=".navbar-collapse"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="index.html">
+              <h1><img src="/images/logo-20151001.png" alt="logo" /></h1>
+            </a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right"></ul>
+          </div>
+          <div class="search"></div>
         </div>
-        <div class="navbar navbar-inverse" role="banner">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-
-                    <a class="navbar-brand" href="index.html">
-                        <h1><img src="/images/logo-20151001.png" alt="logo"></h1>
-                    </a>
-
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-
-                    </ul>
-                </div>
-                <div class="search">
-                </div>
-            </div>
-        </div>
+      </div>
     </header>
 
     <section id="home-slider">
-        <div class="container">
-            <div class="row">
-                <div class="main-slider">
-                    <div class="slide-text">
-                        <h1>Mine your mountain of data</h1>
-                            <h2>
-                                Transform Your Data into Actionable Insights with AI Consulting Services.
-                            </h2>
-                            <p>
-
-                                Are you looking for an AI expert to help you get the most out of your data? Look no further! Our team of experienced AI consultants is here to help you harness the power of artificial intelligence to drive business growth.
-                            </p>
-<p>
-    Whether you need to mine your mountain of data, build custom deep learning models, or design and integrate ETL processes, we have the expertise and tools to help you achieve your goals. Our services include:
-</p>
-<p>
-
-    Data Mining: Get more value from your data by leveraging our expertise in data extraction, analysis, and visualization.
-</p>
-<p>
-
-    Custom Deep Learning Models: Unlock the potential of NLP, Vision, and Reinforcement Learning with our custom models built using Tensorflow and PyTorch.
-</p>
-<p>
-
-    End-to-End Machine Learning Pipelines: Streamline your AI workflows with our end-to-end solutions, integrated with KubeFlow, Kubernetes, Google Cloud, SageMaker, and AWS.
-</p>
-<p>
-
-    ETL Process Design and Integration: Simplify data transfer and storage with our custom-designed and integrated ETL processes, using AWS, Python, Golang, and TypeScript.
-</p>
-<p>
-                            Mobile Monitoring Solutions: Stay on top of your data with our ad-hoc mobile monitoring solutions for iOS and Android.
-
-                            Let us help you take your AI capabilities to the next level. Contact us today to learn more."
-                        </p>
-                        <ul>
-                            <li>Custom Deep Learning Models using Tensorflow, PyTorch for NLP, Vision, Reinforcement
-                                Learning</li>
-                            <li>End to End Machine Learning Pipelines (KubeFlow/Kubernetes/Google Cloud, SageMaker/AWS)
-                            </li>
-                            </li>
-                            <li>Custom design and integration of ETL processes (AWS/Python/Golang/TypeScript) </li>
-                            <li>Ad-Hoc Mobile monitoring solutions (iOS/Android app connected to data sources)</li>
-                        </ul>
-                        <a href="mailto:fmilo@entropysource.com" class="btn btn-common">Contact us</a>
-                    </div>
-                    <img src="/images/home/slider/hill.png" class="slider-hill" alt="slider image">
-                    <img src="/images/home/slider/house.png" class="slider-house" alt="slider image">
-                    <img src="/images/home/slider/sun.png" class="slider-sun" alt="slider image">
-                    <img src="/images/home/slider/birds1.png" class="slider-birds1" alt="slider image">
-                    <img src="/images/home/slider/birds2.png" class="slider-birds2" alt="slider image">
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="main-slider">
+            <div
+              class="text-center lg:text-left w-full lg:w-1/2 order-last lg:order-first"
+            >
+              <h1>Mine your mountain of data</h1>
+              <h2>
+                Transform Your Data into Actionable Insights with Entropy
+                Source's AI Consulting Services.
+              </h2>
+              <p>
+                Are you looking for a A.I. experts to help you get the most out
+                of your data? Look no further! Our team of experienced A.I.
+                consultants is here to help you harness the power of artificial
+                intelligence to drive business growth.
+              </p>
+              <p>
+                Whether you need to mine your mountain of data, build custom
+                deep learning models, or design and integrate ETL processes, we
+                have the expertise and tools to help you achieve your goals.
+              </p>
+              <div class="flex flex-row">
+                <a
+                  class="rounded-lg shadow-lg mx-2 my-4 p-8 flex flex-row w-1/4 font-bold text-2xl text-center justify-right text-capitalize bg-slate-500 border-spacing-2 border-none display-block text-white hover:bg-slate-200 hover:text-black items-center justify-center"
+                  href="mailto:fmilo@entropysource.com"
+                  title="contact us"
+                >
+                  <span> CONTACT US </span>
+                  <img
+                    class="px-2"
+                    src="/images/lightbox/next.png"
+                    width="32"
+                    height="32"
+                    alt=">"
+                  />
+                </a>
+              </div>
             </div>
+            <div id="image" class="order-first md:order-last">
+              <div class="preloader"><i class="fa fa-sun-o fa-spin"></i></div>
+              <img
+                src="images/home/under.png"
+                class="img-responsive inline"
+                alt=""
+              />
+              <img
+                src="images/home/slider/hill.png"
+                class="slider-hill"
+                alt="slider image"
+              />
+              <img
+                src="images/home/slider/house.png"
+                class="slider-house"
+                alt="slider image"
+              />
+              <img
+                src="images/home/slider/sun.png"
+                class="slider-sun"
+                alt="slider image"
+              />
+              <img
+                src="images/home/slider/birds1.png"
+                class="slider-birds1"
+                alt="slider image"
+              />
+              <img
+                src="images/home/slider/birds2.png"
+                class="slider-birds2"
+                alt="slider image"
+              />
+            </div>
+          </div>
         </div>
-        <div class="preloader"><i class="fa fa-sun-o fa-spin"></i></div>
-        <div class="col-sm-12 text-center bottom-separator">
-            <img src="/images/home/under.png" class="img-responsive inline" alt="">
-        </div>
+      </div>
     </section>
+    <section class="pt-24">
+      <div class="container">
+        <div class="flex flex-col text-center md:text-left md:px-8">
+          <h1 class="pt-24">Our services include:</h1>
 
-    <footer class="footer">
-        <h4>
-            &copy; Entropy source Consulting 2023. All Rights Reserved.
-        </h4>
-    </footer>
+          <h3>Custom Deep Learning Models</h3>
+          <p>
+            Unlock the potential of NLP, Vision, and Reinforcement Learning with
+            our custom models built using Tensorflow and PyTorch.
+          </p>
+          <h3>End-to-End Machine Learning Pipelines</h3>
+          <p>
+            Streamline your AI workflows with our end-to-end solutions,
+            integrated with KubeFlow, Kubernetes, Google Cloud, SageMaker, and
+            AWS.
+          </p>
+          <h3>Data Mining</h3>
+          <p>
+            Get more value from your data by leveraging our expertise in data
+            extraction, analysis, and visualization.
+          </p>
+          <h3>ETL Process Design and Integration</h3>
+          <p>
+            Simplify data transfer and storage with our custom-designed and
+            integrated ETL processes, using AWS, Python, Golang, and TypeScript.
+          </p>
+          <h3>Automation</h3>
+          <p>Advanced CDK pipelines, CI/CD, terraform.</p>
+          <h3>Mobile Solutions</h3>
+          <p>
+            Stay on top of your data with our ad-hoc mobile monitoring solutions
+            for iOS and Android. Let us help you take your AI capabilities to
+            the next level. Contact us today to learn more."
+          </p>
+
+          <h3>Summary</h3>
+          <ul>
+            <li>
+              Custom Deep Learning Models using Tensorflow, PyTorch for NLP,
+              Computer Vision, Reinforcement Learning
+            </li>
+            <li>
+              End to End Machine Learning Pipelines (KubeFlow/Kubernetes/Google
+              Cloud, SageMaker/AWS)
+            </li>
+            <li>
+              Custom design and integration of ETL processes
+              (AWS/Python/Golang/TypeScript)
+            </li>
+            <li>
+              Ad-Hoc Mobile monitoring solutions (iOS/Android app connected to
+              data sources)
+            </li>
+          </ul>
+          <a
+            class="rounded-lg shadow-lg mx-2 my-4 p-8 flex flex-row w-1/4 font-bold text-2xl text-center justify-center text-capitalize bg-slate-500 border-spacing-2 border-none display-block text-white hover:bg-slate-200 hover:text-black items-center"
+            href="mailto:fmilo@entropysource.com"
+            title="contact us"
+          >
+            <span> CONTACT US </span>
+            <img
+              class="px-2"
+              src="/images/lightbox/next.png"
+              width="32"
+              height="32"
+              alt=">"
+            />
+          </a>
+        </div>
+      </div>
+    </section>
+    <h4 class="m-8 flex flex-row justify-center text-gray-300 text-sm">
+      <p>&copy; Entropy source Consulting 2023. All Rights Reserved.</p>
+    </h4>
+    <footer class="m-0 p-0 mt-8 pt-8"></footer>
 
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/lightbox.min.js"></script>
     <script type="text/javascript" src="/js/wow.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
-</body>
-
+  </body>
 </html>
